--- a/app/templates/notices/notices.html
+++ b/app/templates/notices/notices.html
@@ -22,10 +22,10 @@
                                     <img src="{{ notice.cover_image }}" alt="notice.title" class="cover_image">
                                 </div>
                                 <div class="notice-description">
-                                    <h1 class="title">{{ notice.title }}</h1>
-                                    <h2 class="subtitle">{{ notice.subtitle }}</h2>
+                                    <h3 class="title">{{ notice.title }}</h3>
+                                    <span class="subtitle">{{ notice.subtitle }}</span>
                                     <div class="itens">
-                                        <p class="addedAt"><i class="far fa-clock" style="margin-right: 5px;"></i>{{ DatePost(notice.addedAt) }}</p>
+                                        <time class="addedAt" datetime="{{ notice.addedAt }}"><i class="far fa-clock" style="margin-right: 5px;"></i>{{ DatePost(notice.addedAt) }}</time>
                                     </div>
                                 </div>
                             </div>
