--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -43,7 +43,7 @@
                                                 </div>
                                                 <div class="notice-top-description">
                                                     <span class="notice-top-title">{{ notice.title }}</span>
-                                                    <span class="top-description">{{ notice.subtitle }}</h2>
+                                                    <span class="top-description">{{ notice.subtitle }}</span>
                                                     <time class="notice-top-addedAt" datetime="{{ notice.addedAt }}"><i class="far fa-clock" style="margin-right: 5px;"></i>{{ DatePost(notice.addedAt) }}</time>
                                                 </div>
                                             </span>
