--- a/app/static/css/main_page.css
+++ b/app/static/css/main_page.css
@@ -40,7 +40,7 @@
     width: 100%;
     border-bottom: 1px solid #EBE8EC;
     padding-bottom: 20px;
-    margin-bottom: 20px;
+    margin: 0 auto 20px auto;
 }
 
 .notice-itens a .notice-1 .icon {
@@ -305,9 +305,7 @@ a .notice-1 .icon img {
 
     .notices-top .notice-itens a .notice-1 {
         display: block;
-        width: 98%;
-        margin-left: 0px;
-        box-shadow: 0 0 5px #827189;
+        width: 99%;
         padding-bottom: 10px;
     }
 
@@ -426,7 +424,7 @@ a .notice-1 .icon img {
         margin: 2.5px 2.5px 15px 2.5px;
         height: max-content;
         height: max-content;
-        box-shadow: 0 0 5px #827189;
+        border-bottom: 1px solid #EBE8EC;
         padding-bottom: 10px;
     }
 
