--- a/app/templates/components/footer.html
+++ b/app/templates/components/footer.html
@@ -1,4 +1,4 @@
-<div class="footer">
+<footer class="footer">
     <div class="footer-1part">
         <div class="logo-img">
             <img src="{{ url_for('static', filename='logo.png') }}" alt="" class="logo">
@@ -40,4 +40,4 @@
         </nav>
         <div class="site-name">©maisgamer.com 2020</div>
     </div>
-</div>
+</footer>
