Faz várias mudanças

--- a/app/templates/components/footer.html
+++ b/app/templates/components/footer.html
@@ -38,6 +38,6 @@
                 </a>
             </div>
         </nav>
-        <div class="site-name">©maisgamer.com 2020</div>
+        <div class="site-name">Copyright © 2020 maisgamer.com</div>
     </div>
 </footer>
