--- a/app/static/css/auth.css
+++ b/app/static/css/auth.css
@@ -1,13 +1,12 @@
 .web {  
-    background-color: #d6d5d8;
-    height: 100%;
+    background-color: #FFFFFF;
 }
 
 .web .payload {
     height: 100%;
     min-height: 100%;
     user-select: none;
-    background-color: #d6d5d8;
+    background-color: #FFFFFF;
 }
 
 .web .payload .login-container {
