--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <div class="loader">
+    <!--<div class="loader">
         <div class="loader-figure">
             <div class="center-logo">
                 <img src="{{ url_for('static', filename='favicon_2.png') }}" alt="Mais Gamer">
@@ -11,7 +11,7 @@
                 loader.className += ' hidden';
             });
         </script>
-    </div>
+    </div>-->
     <input type="checkbox" id="options1" onchange="dockCloser()">
     <label for="options1"><div class="background-options"></div></label>
     <div class="header-mobile">
