--- a/app/static/css/main_page.css
+++ b/app/static/css/main_page.css
@@ -25,10 +25,10 @@
 }
 
 .notices-top .notice-itens a:hover > .notice-1 .icon img {
-    width: 100%;
-    -webkit-transform: scale(1);
+    opacity: 0.8;
+    /*-webkit-transform: scale(1);
 	    -moz-transform: scale(1);
-            transform: scale(1);
+            transform: scale(1);*/
 }
 
 .notices-top .notice-itens a:hover > .notice-1 .notice-description .title {
@@ -57,9 +57,9 @@ a .notice-1 .icon img {
     -moz-transform: scale(1.03);
     -webkit-transform: scale(1.03);
     transform: scale(1.03);
-    -webkit-transition: all 0.2s linear;
-        -moz-transition: all 0.2s linear;
-            transition: all 0.2s linear;
+    -webkit-transition: all 0.1s linear;
+        -moz-transition: all 0.1s linear;
+            transition: all 0.1s linear;
 }
 
 .notice-itens a .notice-1 .notice-description {
@@ -115,9 +115,7 @@ a .notice-1 .icon img {
 }
 
 .notice-itens .rest .notice-top-url:hover > .notice-container-top .notice-top-icon img {
-    transform: scale(1);
-    -moz-transform: scale(1);
-    -webkit-transform: scale(1);
+    opacity: 0.8;
 }
 
 .notice-itens .rest .notice-top-url:hover > .notice-container-top .notice-top-description .notice-top-title {
@@ -136,9 +134,6 @@ a .notice-1 .icon img {
     transition: all 0.2s linear;
     -moz-transition: all 0.2s linear;
     -webkit-transition: all 0.2s linear;
-    transform: scale(1.03);
-    -moz-transform: scale(1.03);
-    -webkit-transform: scale(1.03);
 }
 
 .notice-container-top .notice-top-description .notice-top-title {
@@ -230,9 +225,7 @@ a .notice-1 .icon img {
 }
 
 .all-notices .elements .notice-element .notice-url:hover > .notice-container .notice-icon img {
-    -webkit-transform: scale(1);
-        -moz-transform: scale(1);
-            transform: scale(1);
+    opacity: 0.8;
 }
 
 .all-notices .elements .notice-element .notice-url:hover > .notice-container .notice-description .notice-title {
@@ -256,9 +249,6 @@ a .notice-1 .icon img {
     -webkit-transition: all 0.2s linear;
         -moz-transition: all 0.2s linear;
             transition: all 0.2s linear;
-    -webkit-transform: scale(1.03);
-        -moz-transform: scale(1.03);
-            transform: scale(1.03);
 }
 
 .notice-container .notice-description .notice-title {
