--- a/app/static/css/notices.css
+++ b/app/static/css/notices.css
@@ -58,15 +58,10 @@
     -webkit-transition: all 0.2s linear;
         -moz-transition: all 0.2s linear;
             transition: all 0.2s linear;
-    -webkit-transform: scale(1.04);
-        -moz-transform: scale(1.04);
-            transform: scale(1.04);
 }
 
 .payload .notice:hover > .cover_image img {
-    -webkit-transform: scale(1);
-        -moz-transform: scale(1);
-            transform: scale(1);
+    opacity: 0.8;
 }
 
 .payload .notice:hover > .notice-description .title {
