--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -24,8 +24,12 @@
             <label for="options1"><svg width="35" height="35" class="" viewBox="0 0 32 32"><circle opacity=".07" cx="16" cy="16" r="16" fill="#FFFFFF"></circle><g stroke="#C7C7C7" stroke-width="2"><path d="M12.007 11.973l8.132 8.132M11.993 20.093l8.131-8.132"></path></g></svg></label>
         </div>
         {% if current_user.is_authenticated %}
-        <input type="checkbox" id="mo1" class="input-second-options-mobile">
-            <label for="mo1" class="header-1part-1opc" id="header-login"><i class="fas fa-user-circle" style="margin-right: 10px; font-size: 30px;"></i>{{ current_user.name }} <svg width="8" height="5" viewBox="0 0 8 5" class="arrow-right" fill="#ffa31a" xmlns="http://www.w3.org/2000/svg"><path d="M0.707109 1.70711L3.29289 4.29289C3.68342 4.68342 4.31658 4.68342 4.70711 4.29289L7.29289 1.70711C7.92286 1.07714 7.47669 0 6.58579 0H1.41421C0.523309 0 0.0771438 1.07714 0.707109 1.70711Z"></path></svg></label>
+            <input type="checkbox" id="mo1" class="input-second-options-mobile">
+            {% if current_user.icon %}
+                <label for="mo1" class="header-1part-1opc" id="header-login"><img class="user-icon" src="{{ current_user.icon }}" alt="{{ current_user.name + ' ' + current_user.surname }}" style="margin-right: 10px; font-size: 30px;" />{{ current_user.name }} <svg width="8" height="5" viewBox="0 0 8 5" class="arrow-right" fill="#ffa31a" xmlns="http://www.w3.org/2000/svg"><path d="M0.707109 1.70711L3.29289 4.29289C3.68342 4.68342 4.31658 4.68342 4.70711 4.29289L7.29289 1.70711C7.92286 1.07714 7.47669 0 6.58579 0H1.41421C0.523309 0 0.0771438 1.07714 0.707109 1.70711Z"></path></svg></label>
+            {% else %}    
+                <label for="mo1" class="header-1part-1opc" id="header-login"><i class="fas fa-user-circle" style="margin-right: 10px; font-size: 30px;"></i>{{ current_user.name }} <svg width="8" height="5" viewBox="0 0 8 5" class="arrow-right" fill="#ffa31a" xmlns="http://www.w3.org/2000/svg"><path d="M0.707109 1.70711L3.29289 4.29289C3.68342 4.68342 4.31658 4.68342 4.70711 4.29289L7.29289 1.70711C7.92286 1.07714 7.47669 0 6.58579 0H1.41421C0.523309 0 0.0771438 1.07714 0.707109 1.70711Z"></path></svg></label>
+            {% endif %}    
             <div class="second-options-mobile" id="som-1">
                 <div class="second-options-mobile-header">
                     <label class="back" for="mo1"><svg width="8" height="5" viewBox="0 0 8 5" class="arrow-left" fill="#ffa31a" xmlns="http://www.w3.org/2000/svg"><path d="M0.707109 1.70711L3.29289 4.29289C3.68342 4.68342 4.31658 4.68342 4.70711 4.29289L7.29289 1.70711C7.92286 1.07714 7.47669 0 6.58579 0H1.41421C0.523309 0 0.0771438 1.07714 0.707109 1.70711Z"></path></svg>Voltar</label>
@@ -130,7 +134,11 @@
             {% if current_user.is_authenticated %}
                 <div class="user">
                     <a class="user-name">
-                        <i class="fas fa-user-circle" style="font-size: 25px;"></i>
+                        {% if current_user.icon %}
+                            <img class="user-icon" src="{{ current_user.icon }}" alt="{{ current_user.name + ' ' + current_user.surname }}">
+                        {% else %}
+                            <i class="fas fa-user-circle" style="font-size: 25px;"></i>
+                        {% endif %}
                             {{ current_user.name }}
                         <svg width="8" height="5" viewBox="0 0 8 5" class="arrow-down" fill="#ffa31a" xmlns="http://www.w3.org/2000/svg"><path d="M0.707109 1.70711L3.29289 4.29289C3.68342 4.68342 4.31658 4.68342 4.70711 4.29289L7.29289 1.70711C7.92286 1.07714 7.47669 0 6.58579 0H1.41421C0.523309 0 0.0771438 1.07714 0.707109 1.70711Z"></path></svg>
                     </a>
