--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -13,6 +13,11 @@
                         <form action="" method="post" novalidate>
                             <h1>Meus Dados</h1>
                             {{ form.hidden_tag() }}
+                            {% if current_user.icon %}
+                                <img class="user-icon" src="{{ current_user.icon }}" alt="{{ current_user.name }}">
+                            {% else %}
+                                <i class="fas fa-user-circle" style="font-size: 200px;"></i>
+                            {% endif %}
                             <div>
                                 <label for="">NOME DE USUÁRIO</label>
                                 {{ form.username(type="text", class="info-input") }}
