--- a/app/templates/components/footer.html
+++ b/app/templates/components/footer.html
@@ -7,10 +7,10 @@
             <nav>
                 <ul>
                     <li class="home-list"><a href="{{ url_for('index') }}" class="home"><i class="fas fa-home" style="margin-right: 10px;"></i>Página inicial</a></li>  
-                    <!--<li><a href="{{ url_for('index') }}">Suporte</a></li>
+                    <li><a href="{{ url_for('index') }}">Suporte</a></li>
                     <li><a href="{{ url_for('index') }}">Sobre nós</a></li>   
                     <li><a href="{{ url_for('index') }}">Termos de uso</a></li>
-                    <li><a href="{{ url_for('index') }}">Política de privacidade</a></li>-->
+                    <li><a href="{{ url_for('index') }}">Política de privacidade</a></li>
                 </ul>
             </nav>
         </div>
