--- a/app/static/css/header.css
+++ b/app/static/css/header.css
@@ -261,33 +261,46 @@
 }
 
 .header .header-2part .search {
-    margin: 0 3% 0 auto;
+    display: flex;
+    align-items: center;
+    display: block;
+    color: #FFFFFF;
+    font-size: 20px;
     user-select: none;
+    z-index: 10;
 }
 
 .header .header-2part .search .search-input {
-    position: relative;
-    top: 1px;
-    width: 150px;
+    color: #FFFFFF;
+    width: 300px;
     height: 32px;
     font-size: 19px;
     border: 1px solid #FFFFFF;
-    border-right: 0 none;
-    border-top-left-radius: 3px;
-    border-bottom-left-radius: 3px;
+    border-radius: 3px;
     padding: 5px;
     background-color: #363636;
     font-size: 15px;
+    justify-content: center;
     -webkit-transition: all 0.2s linear;
         -moz-transition: all 0.2s linear;
             transition: all 0.2s linear;
 }
 
 .header .header-2part .search .search-input:focus {
-    width: 300px;
+    width: 400px;
     background-color: #FFFFFF;
     color: #363636;
     outline: 0;
+}
+
+.header .header-2part .search .search-input:focus ~ .results {
+    visibility: visible;
+    max-height: 70vh;
+    width: 50%;
+    height: max-content;
+    overflow: hidden;
+    overflow-y: auto;
+    z-index: 10;
 }
 
 .header .header-2part .search .search-input:focus ~ button .search-icon  {
@@ -317,6 +330,105 @@
     top: 30px;
     width: 1px;
     height: 1px;
+}
+
+.header .header-2part .search .results {
+    align-self: center;
+    visibility: hidden;
+    position: absolute;
+    top: 91px;
+    width: 300px;
+    height: 0;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    background-color: #111111;
+    z-index: 0;
+    box-shadow: 0px 0px 5px black;
+    overflow: hidden;
+    border: 1px solid #212121;
+    border-radius: 5px;
+    -webkit-transition: all 0.2s linear;
+        -moz-transition: all 0.2s linear;
+            transition: all 0.2s linear;
+}
+
+.header-2part .search .results a {
+    display: block;
+    text-decoration: none;
+    padding: 20px 10px;
+    border-bottom: 1px solid #212121;
+    -webkit-transition: all 0.1s linear;
+        -moz-transition: all 0.1s linear;
+            transition: all 0.1s linear;
+}
+
+.header-2part .search .results .container-result a:hover {
+    background-color: #212121;
+}
+
+.header-2part .search .container-result .results a:hover >  .cover_image {
+    opacity: 0.8;
+}
+
+.header-2part .search .container-result .results a:hover > .container .data .title {
+    text-decoration: underline;
+}
+
+.header-2part .search .results .result-title {
+    width: 100%;
+    text-align: center;
+    font-size: 14px;
+    display: block;
+    background: #000000;
+    border-bottom: 1px solid #212121;
+    padding: 4px 0;
+}
+
+.search .results .container-result {
+    justify-content: start;
+    display: block;
+    width: 100%;
+    padding: 5px;
+}
+
+.search .results .container-result .container {
+    display: flex;
+}
+
+.results .container-result .container .cover_image {
+    max-width: 20%;
+    overflow: hidden;
+    display: block;
+}
+
+.results .container-result .container .cover_image img {
+    width: 100%;
+    height: 100%;
+    -moz-transform: scale(1.03);
+    -webkit-transform: scale(1.03);
+    transform: scale(1.03);
+    -webkit-transition: all 0.2s linear;
+        -moz-transition: all 0.2s linear;
+            transition: all 0.2s linear;
+}
+
+.container-result .container .data {
+    width: 95%;
+    margin: 0 20px;
+}
+
+.container-result .container .data .title {
+    display: block;
+    color: #FFFFFF;
+    text-decoration: none;
+    font-size: 22px;
+}
+
+.container-result .container .data .subtitle {
+    font-size: 17px;
+    color: #D2D2D2;
+    text-decoration: none;
 }
 
 .header .header-2part .user {
@@ -456,6 +568,14 @@
 .header .header-2part .auth .signup:hover {
     background-color: #ffa31a;
     color: #000000;
+}
+
+.header .header-2part .auth ul {
+    display: flex;
+}
+
+.header .header-2part .auth ul li {
+    list-style-type: none;
 }
 
 .second-options-mobile {
@@ -635,6 +755,14 @@
     .header-1part .header-1part-top .Favicon {
         width: 50px;
         margin-left: 10px;
+    }
+
+    .header .header-1part #header-login ul {
+        display: flex;
+    }
+
+    header .header-1part #header-login ul li {
+        list-style-type: none;
     }
 
     .header .header-1part #header-login .login {
