Muda configurações do search

--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -227,7 +227,9 @@
             <img src="{{ url_for('static', filename='logo.png') }}" alt="Mais Gamer" class="logo">
         </a>
         <div class="search">
-                <input name="q" type="search" class="search-input" placeholder="Buscar" autocomplete="off" />
+                <input type="checkbox" class="checkbox-search">
+                <div class="background-search"></div>
+                <input type="search" class="search-input" placeholder="Buscar" autocomplete="off" />
                 <div class="results">
                     <span class="result-title">Escreva para buscar</span>
                     <div class="container-result">
