--- a/app/static/css/header.css
+++ b/app/static/css/header.css
@@ -270,6 +270,36 @@
     z-index: 10;
 }
 
+.header .header-2part .search .checkbox-search {
+    display: none;
+}
+
+.header .header-2part .search .checkbox-search:checked ~ .results {
+    visibility: visible;
+    max-height: 70vh;
+    width: 50%;
+    height: max-content;
+    overflow: hidden;
+    overflow-y: auto;
+    z-index: 10;
+}
+
+.header .header-2part .search .checkbox-search:checked ~ .background-search {
+    display: block;
+}
+
+.header .header-2part .search .background-search {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: black;
+    opacity: 0;
+    z-index: 7;
+}
+
 .header .header-2part .search .search-input {
     color: #FFFFFF;
     width: 300px;
@@ -280,6 +310,7 @@
     padding: 5px;
     background-color: #363636;
     font-size: 15px;
+    z-index: 8;
     justify-content: center;
     -webkit-transition: all 0.2s linear;
         -moz-transition: all 0.2s linear;
@@ -291,16 +322,6 @@
     background-color: #FFFFFF;
     color: #363636;
     outline: 0;
-}
-
-.header .header-2part .search .search-input:focus ~ .results {
-    visibility: visible;
-    max-height: 70vh;
-    width: 50%;
-    height: max-content;
-    overflow: hidden;
-    overflow-y: auto;
-    z-index: 10;
 }
 
 .header .header-2part .search .search-input:focus ~ button .search-icon  {
@@ -343,7 +364,7 @@
     left: 0;
     right: 0;
     background-color: #111111;
-    z-index: 0;
+    z-index: 8;
     box-shadow: 0px 0px 5px black;
     overflow: hidden;
     border: 1px solid #212121;
